--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /IFT215-Project/nbproject/private/
+/taxescalculation/nbproject/private/
+/IFT215-Project/build/
