--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ Temporary Items
 /IFT215-Project/nbproject/private/
 /taxescalculation/nbproject/private/
 /IFT215-Project/build/
+/carsalle/nbproject/private/
